# worst-audio-sampler

./: CMakeLists.txt  README.md
include/: BitMap.h  Wave.h  bitmap.h
src/: BitMap.cpp  Wave.cpp  audio_to_image.cpp  image_to_audio.cpp
x86_64-bin/: audio-to-image  image-to-audio
